update leaderships section

--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                 <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li> -->
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#leaderships">Leaderships</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
             </ul>
@@ -69,33 +70,6 @@
             </div>
         </section>
         <hr class="m-0" />
-        <!-- Experience-->
-        <section class="resume-section" id="experience">
-            <div class="resume-section-content">
-                <h2 class="mb-5">Experience</h2>
-                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                    <div class="flex-grow-1">
-                        <h3 class="mb-0">Warehouse Worker (Part-Time)</h3>
-                        <div class="subheading mb-3">Shopee</div>
-                        <p>Ensuring the tidiness of the warehouse by collecting and throwing away empty boxes.
-                            Next, picking items from the shelves and deliver it to packaging station. Finally, packing
-                            customers items into boxes.</p>
-                    </div>
-                    <div class="flex-shrink-0"><span class="text-primary">January 2021 - January 2021</span></div>
-                </div>
-                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                    <div class="flex-grow-1">
-                        <h3 class="mb-0">Junior Software Engineer</h3>
-                        <div class="subheading mb-3">Canang Technologies Sdn. Bhd.</div>
-                        <p>Assists Senior Programmer in developing software solutions for clients' project.
-                            The programming language that been used to develop the systems is Java.
-                        </p>
-                    </div>
-                    <div class="flex-shrink-0"><span class="text-primary">May 2018 - June 2019</span></div>
-                </div>
-            </div>
-        </section>
-        <hr class="m-0" />
         <!-- Education-->
         <section class="resume-section" id="education">
             <div class="resume-section-content">
@@ -117,6 +91,33 @@
                         <p>[Completed] CGPA: 3.50</p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">May 2015 - March 2018</span></div>
+                </div>
+            </div>
+        </section>
+        <hr class="m-0" />
+        <!-- Experience-->
+        <section class="resume-section" id="experience">
+            <div class="resume-section-content">
+                <h2 class="mb-5">Experience</h2>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="flex-grow-1">
+                        <h3 class="mb-0">Warehouse Worker (Part-Time)</h3>
+                        <div class="subheading mb-3">Shopee</div>
+                        <p>Ensuring the tidiness of the warehouse by collecting and throwing away empty boxes.
+                            Next, picking items from the shelves and deliver it to packaging station. Finally, packing
+                            customers items into boxes.</p>
+                    </div>
+                    <div class="flex-shrink-0"><span class="text-primary">Jan 2021 - Jan 2021</span></div>
+                </div>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="flex-grow-1">
+                        <h3 class="mb-0">Junior Software Engineer</h3>
+                        <div class="subheading mb-3">Canang Technologies Sdn. Bhd.</div>
+                        <p>Assists Senior Programmer in developing software solutions for clients' project.
+                            The programming language that been used to develop the systems is Java.
+                        </p>
+                    </div>
+                    <div class="flex-shrink-0"><span class="text-primary">May 2018 - Jun 2019</span></div>
                 </div>
             </div>
         </section>
@@ -258,6 +259,39 @@
             </div>
         </section>
         <hr class="m-0" /> -->
+        <!-- Leaderships-->
+        <section class="resume-section" id="leaderships">
+            <div class="resume-section-content">
+                <h2 class="mb-5">Leaderships</h2>
+                <ul class="fa-ul mb-0">
+                    <li><strong>Degree</strong></li>
+                    <ul>
+                        <li>
+                            Exco Innovation and Creative of Jawatankuasa Perwakilan Kolej 2019/2020
+                        </li>
+                    </ul>
+                    <br>
+                    <li><strong>Diploma</strong></li>
+                    <ul>
+                        <li>
+                            President of Jawatankuasa Perwakilan Kolej 2017/2018
+                        </li>
+                        <ul class="fa-ul mb-0">
+                            <li><span class="fa-li">>></span> Lead the organization.</li>
+                            <li><span class="fa-li">>></span> Chaired the organization's meetings.</li>
+                        </ul>
+                        <br>
+                        <li>
+                            Exco Sport and Recreation of Jawatankuasa Perwakilan Kolej 2016/2017
+                        </li>
+                        <ul class="fa-ul mb-0">
+                            <li><span class="fa-li">>></span> Planned and executed sport events to encourages healthy lifestyles among the residents.</li>
+                        </ul>
+                    </ul>
+
+                </ul>
+            </div>
+        </section>
         <!-- Awards-->
         <section class="resume-section" id="awards">
             <div class="resume-section-content">
