update education sect

--- a/index.html
+++ b/index.html
@@ -80,9 +80,10 @@
                         <div class="subheading mb-3">Bachelor of Information Systems in Intelligent Systems Engineering
                         </div>
                         <div>Big Data Track</div>
+                        <p>Courses: Database Management, Programming for Data Science, Machine Learning, Data Mining, Business Data Analytics.</p>
                         <p>[In Progress] CGPA: 3.70</p>
                     </div>
-                    <div class="flex-shrink-0"><span class="text-primary">September 2019 - January 2022</span></div>
+                    <div class="flex-shrink-0"><span class="text-primary">Sep 2019 - Jan 2022</span></div>
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between">
                     <div class="flex-grow-1">
