update exp and leadership sect

--- a/index.html
+++ b/index.html
@@ -104,9 +104,20 @@
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Warehouse Worker (Part-Time)</h3>
                         <div class="subheading mb-3">Shopee</div>
-                        <p>Ensuring the tidiness of the warehouse by collecting and throwing away empty boxes.
-                            Next, picking items from the shelves and deliver it to packaging station. Finally, packing
-                            customers items into boxes.</p>
+                        <table class="table table-borderless table-sm">
+                            <tr>
+                                <td><i class="fas fa-chevron-right"></i></td>
+                                <td>Ensured the tidiness of the warehouse by collecting and throwing away empty boxes.</td>
+                            </tr>
+                            <tr>
+                                <td><i class="fas fa-chevron-right"></i></td>
+                                <td>Picked items from the shelves and delivered it to packing station.</td>
+                            </tr>
+                            <tr>
+                                <td><i class="fas fa-chevron-right"></i></td>
+                                <td>Packed customers items into boxes.</td>
+                            </tr>
+                        </table>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">Jan 2021 - Jan 2021</span></div>
                 </div>
@@ -114,9 +125,12 @@
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Junior Software Engineer</h3>
                         <div class="subheading mb-3">Canang Technologies Sdn. Bhd.</div>
-                        <p>Assists Senior Programmer in developing software solutions for clients' project.
-                            The programming language that been used to develop the systems is Java.
-                        </p>
+                        <table class="table table-borderless table-sm">
+                            <tr>
+                                <td><i class="fas fa-chevron-right"></i></td>
+                                <td>Assisted Senior Programmer Developed software solutions for clients by using Java programming language.</td>
+                            </tr>
+                        </table>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">May 2018 - Jun 2019</span></div>
                 </div>
@@ -266,29 +280,26 @@
                 <h2 class="mb-5">Leaderships</h2>
                 <ul class="fa-ul mb-0">
                     <li><strong>Degree</strong></li>
-                    <ul>
-                        <li>
+            
+                        <li><span><i class="fas fa-chevron-circle-right"></i></span>
                             Exco Innovation and Creative of Jawatankuasa Perwakilan Kolej 2019/2020
                         </li>
-                    </ul>
                     <br>
                     <li><strong>Diploma</strong></li>
-                    <ul>
-                        <li>
+                        <li><span><i class="fas fa-chevron-circle-right"></i></span>
                             President of Jawatankuasa Perwakilan Kolej 2017/2018
                         </li>
                         <ul class="fa-ul mb-0">
-                            <li><span class="fa-li">>></span> Lead the organization.</li>
-                            <li><span class="fa-li">>></span> Chaired the organization's meetings.</li>
+                            <li><span class="fa-li"><i class="fas fa-chevron-right"></i></span> Lead the organization.</li>
+                            <li><span class="fa-li"><i class="fas fa-chevron-right"></i></span> Chaired the organization's meetings.</li>
                         </ul>
                         <br>
-                        <li>
+                        <li><span><i class="fas fa-chevron-circle-right"></i></span>
                             Exco Sport and Recreation of Jawatankuasa Perwakilan Kolej 2016/2017
                         </li>
                         <ul class="fa-ul mb-0">
-                            <li><span class="fa-li">>></span> Planned and executed sport events to encourages healthy lifestyles among the residents.</li>
+                            <li><span class="fa-li"><i class="fas fa-chevron-right"></i></span> Planned and executed sport events to encourages healthy lifestyles among the residents.</li>
                         </ul>
-                    </ul>
 
                 </ul>
             </div>
