update edu sect

--- a/index.html
+++ b/index.html
@@ -79,9 +79,21 @@
                         <h3 class="mb-0">Universiti Teknologi MARA · Shah Alam, Selangor</h3>
                         <div class="subheading mb-3">Bachelor of Information Systems in Intelligent Systems Engineering
                         </div>
-                        <div>Big Data Track</div>
-                        <p>Courses: Database Management, Programming for Data Science, Machine Learning, Data Mining, Business Data Analytics.</p>
-                        <p>[In Progress] CGPA: 3.70</p>
+                        <table class="table table-borderless table-sm">
+                            <tr>
+                                <td><i class="fas fa-chevron-right"></i></td>
+                                <td colspan="2">Big Data Track</td>
+                            </tr>
+                            <tr>
+                                <td><i class="fas fa-chevron-right"></i></td>
+                                <td>Courses:</td>
+                                <td>Database Management, Programming for Data Science, Machine Learning, Data Mining, Business Data Analytics</td>
+                            </tr>
+                            <tr>
+                                <td><i class="fas fa-chevron-right"></i></td>
+                                <td colspan="2">[In Progress] CGPA: 3.70</td>
+                            </tr>
+                        </table>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">Sep 2019 - Jan 2022</span></div>
                 </div>
@@ -89,7 +101,12 @@
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Universiti Teknologi MARA · Raub, Pahang</h3>
                         <div class="subheading mb-3">Diploma in Computer Science</div>
-                        <p>[Completed] CGPA: 3.50</p>
+                        <table class="table table-borderless table-sm">
+                            <tr>
+                                <td class="px-0"><i class="fas fa-chevron-right"></i></td>
+                                <td class="px-0">[Completed] CGPA: 3.50</td>
+                            </tr>
+                        </table>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">May 2015 - March 2018</span></div>
                 </div>
