update awards sect

--- a/index.html
+++ b/index.html
@@ -332,6 +332,11 @@
                         <sup>th</sup>
                         Place - MAMPU, JPM - Challenge on Innovation and Problem Solving through Technology Advancement
                         (CHIPTA) 2020
+                        <ul class="fa-ul mb-0">
+                            <li><span class="fa-li"><i class="fas fa-chevron-right"></i></span> 
+                                Won fifth place out of 121 teams in hackathon by working with three colleagues to develop a mobile app
+                                that identifies crime tweets to its crime type by using Machine Learning.</li>
+                        </ul>
                     </li>
                     <br>
                     <li class="bold">
@@ -339,6 +344,11 @@
                         5
                         <sup>th</sup>
                         Place - Universiti Teknologi MARA - Prosolve Programming Competition 2019
+                        <ul class="fa-ul mb-0">
+                            <li><span class="fa-li"><i class="fas fa-chevron-right"></i></span> 
+                                Won fifth place out of 10 teams in hackathon by working with two colleagues to 
+                                solve programming problems by using Python.</li>
+                        </ul>
                     </li>
                 </ul>
             </div>
