update project sect

--- a/index.html
+++ b/index.html
@@ -332,24 +332,24 @@
                         <sup>th</sup>
                         Place - MAMPU, JPM - Challenge on Innovation and Problem Solving through Technology Advancement
                         (CHIPTA) 2020
-                        <ul class="fa-ul mb-0">
-                            <li><span class="fa-li"><i class="fas fa-chevron-right"></i></span> 
-                                Won fifth place out of 121 teams in hackathon by working with three colleagues to develop a mobile app
-                                that identifies crime tweets to its crime type by using Machine Learning.</li>
-                        </ul>
                     </li>
+                    <ul class="fa-ul mb-0">
+                        <li><span class="fa-li"><i class="fas fa-chevron-right"></i></span> 
+                            Won fifth place out of 121 teams in hackathon by working with three colleagues to develop a mobile app
+                            that identifies crime tweets to its crime type by using Machine Learning.</li>
+                    </ul>
                     <br>
                     <li class="bold">
                         <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                         5
                         <sup>th</sup>
                         Place - Universiti Teknologi MARA - Prosolve Programming Competition 2019
-                        <ul class="fa-ul mb-0">
-                            <li><span class="fa-li"><i class="fas fa-chevron-right"></i></span> 
-                                Won fifth place out of 10 teams in hackathon by working with two colleagues to 
-                                solve programming problems by using Python.</li>
-                        </ul>
                     </li>
+                    <ul class="fa-ul mb-0">
+                        <li><span class="fa-li"><i class="fas fa-chevron-right"></i></span> 
+                            Won fifth place out of 10 teams in hackathon by working with two colleagues to 
+                            solve programming problems by using Python.</li>
+                    </ul>
                 </ul>
             </div>
         </section>
@@ -357,29 +357,69 @@
         <section class="resume-section" id="projects">
             <div class="resume-section-content">
                 <h2 class="mb-5">Projects</h2>
-                <!-- <ul class="fa-ul mb-0">
-                    <li>
+                <ul class="fa-ul mb-0">
+                    <li class="bold">
                         <span class="fa-li"><i class="fas fa-code text-warning"></i></span>
                         Mod-Motor Expert System (ModMES)
                     </li>
-                    <li>
+                    <ul class="fa-ul mb-0">
+                        <li><span class="fa-li"><i class="fas fa-chevron-right"></i></span>
+                            Developed a mobile based expert system for motorcycle
+                            modification recommendation.
+                        </li>
+                    </ul>
+                    <br>
+                    <li class="bold">
                         <span class="fa-li"><i class="fas fa-code text-warning"></i></span>
                         Autistic Spectrum Disorder Screening Data for Children Data Set Classification
                     </li>
-                    <li>
+                    <ul class="fa-ul mb-0">
+                        <li><span class="fa-li"><i class="fas fa-chevron-right"></i></span>
+                            A data mining project to classify autistic spectrum disorder screening data.
+                        </li>
+                        <li><span class="fa-li"><i class="fas fa-chevron-right"></i></span>
+                            Tasks involved: Data searching, data preparation (data
+                            cleaning, data transformation, data reduction), classification
+                            model development.
+                        </li>
+                    </ul>
+                    <br>
+                    <li class="bold">
                         <span class="fa-li"><i class="fas fa-code text-warning"></i></span>
                         Car Evaluation Data Set Classification
                     </li>
-                    <li>
+                    <ul class="fa-ul mb-0">
+                        <li><span class="fa-li"><i class="fas fa-chevron-right"></i></span>
+                            A machine learning project to classify car evaluation data 
+                            using back-propagation neural network model.
+                        </li>
+                        <li><span class="fa-li"><i class="fas fa-chevron-right"></i></span>
+                            Developed back-propagation neural network model by using Python.
+                        </li>
+                    </ul>
+                    <br>
+                    <li class="bold">
                         <span class="fa-li"><i class="fas fa-code text-warning"></i></span>
                         Samsung Smartphone Price Analysis
                     </li>
-                    <li>
+                    <ul class="fa-ul mb-0">
+                        <li><span class="fa-li"><i class="fas fa-chevron-right"></i></span>
+                            Analyzed the prices of Samsung's  smartphones scraped from Shopee and Lazada 
+                            by using Tableau.
+                        </li>
+                    </ul>
+                    <br>
+                    <li class="bold">
                         <span class="fa-li"><i class="fas fa-code text-warning"></i></span>
                         Data Analysis on Streaming Platforms
                     </li>
-                </ul> -->
-                <div class="card-group">
+                    <ul class="fa-ul mb-0">
+                        <li><span class="fa-li"><i class="fas fa-chevron-right"></i></span>
+                            Analyzed the movies on Netflix, Prime Video, Hulu and Disney+ by using Microsoft Power BI.
+                        </li>
+                    </ul>
+                </ul>
+                <!-- <div class="card-group">
                     <div class="card">
                       <img class="card-img-top" src="..." alt="Card image cap">
                       <div class="card-body">
@@ -431,7 +471,7 @@
                           <p class="card-text"><small class="text-muted"></small></p>
                         </div>
                       </div>
-                  </div>
+                  </div> -->
             </div>
         </section>
     </div>
