--- a/index.html
+++ b/index.html
@@ -119,6 +119,27 @@
                 <h2 class="mb-5">Experience</h2>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
+                        <h3 class="mb-0">MyVac Volunteer</h3>
+                        <div class="subheading mb-3">Malaysian Red Crescent Society</div>
+                        <table class="table table-borderless table-sm">
+                            <tr>
+                                <td><i class="fas fa-chevron-right"></i></td>
+                                <td>Verify vaccinees' vaccination appointments.</td>
+                            </tr>
+                            <tr>
+                                <td><i class="fas fa-chevron-right"></i></td>
+                                <td>Help distribute the vaccine consent form.</td>
+                            </tr>
+                            <tr>
+                                <td><i class="fas fa-chevron-right"></i></td>
+                                <td>Controlling and managing the crowd in PPV.</td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="flex-shrink-0"><span class="text-primary">Aug 2021 - Aug 2021</span></div>
+                </div>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="flex-grow-1">
                         <h3 class="mb-0">Warehouse Worker (Part-Time)</h3>
                         <div class="subheading mb-3">Shopee</div>
                         <table class="table table-borderless table-sm">
