update skills level

--- a/index.html
+++ b/index.html
@@ -179,31 +179,42 @@
         <section class="resume-section" id="skills">
             <div class="resume-section-content">
                 <h2 class="mb-5">Skills</h2>
+                <div class="subheading mb-1">
+                    Beginner: <i class="fas fa-star"></i>, 
+                    Intermediate: <i class="fas fa-star"></i><i class="fas fa-star"></i>, 
+                    Advanced: <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                </div>
                 <div class="subheading mb-3">General Skills</div>
                 <ul class="fa-ul mb-0">
                     <li>
-                        <span class="fa-li"><i class="fas fa-check"></i></span>
+                        <span class="fa-li"><i class="fas fa-chevron-right"></i></span>
                         Data Mining
+                        <i class="fas fa-star"></i> 
                     </li>
                     <li>
-                        <span class="fa-li"><i class="fas fa-check"></i></span>
+                        <span class="fa-li"><i class="fas fa-chevron-right"></i></span>
                         Data Analysis
+                        <i class="fas fa-star"></i>
                     </li>
                     <li>
-                        <span class="fa-li"><i class="fas fa-check"></i></span>
+                        <span class="fa-li"><i class="fas fa-chevron-right"></i></span>
                         Data Visualization
+                        <i class="fas fa-star"></i>
                     </li>
                     <li>
-                        <span class="fa-li"><i class="fas fa-check"></i></span>
+                        <span class="fa-li"><i class="fas fa-chevron-right"></i></span>
                         Machine Learning
+                        <i class="fas fa-star"></i>
                     </li>
                     <li>
-                        <span class="fa-li"><i class="fas fa-check"></i></span>
+                        <span class="fa-li"><i class="fas fa-chevron-right"></i></span>
                         Statistic
+                        <i class="fas fa-star"></i>
                     </li>
                     <li>
-                        <span class="fa-li"><i class="fas fa-check"></i></span>
+                        <span class="fa-li"><i class="fas fa-chevron-right"></i></span>
                         Mobile Application
+                        <i class="fas fa-star"></i>
                     </li>
                 </ul>
                 <br>
@@ -213,17 +224,14 @@
                      </li>
 
                     <li>
-                        <span class="fa-li"><i class="fas fa-check"></i></span>
+                        <span class="fa-li"><i class="fas fa-chevron-right"></i></span>
                         MySQL
-
+                        <i class="fas fa-star"></i><i class="fas fa-star"></i>
                     </li>
                     <li>
-                        <span class="fa-li"><i class="fas fa-check"></i></span>
+                        <span class="fa-li"><i class="fas fa-chevron-right"></i></span>
                         Postgres
-
-                    </li>
-
-
+                        <i class="fas fa-star"></i><i class="fas fa-star"></i>
                     </li>
                 </ul>
                 <br>
@@ -232,67 +240,60 @@
                         <strong>Programming Language</strong></li>
 
                     <li>
-                        <span class="fa-li"><i class="fas fa-check"></i></span>
+                        <span class="fa-li"><i class="fas fa-chevron-right"></i></span>
                         Python
-
+                        <i class="fas fa-star"></i><i class="fas fa-star"></i>
                     </li>
                     <li>
-                        <span class="fa-li"><i class="fas fa-check"></i></span>
+                        <span class="fa-li"><i class="fas fa-chevron-right"></i></span>
                         HTML
-
+                        <i class="fas fa-star"></i><i class="fas fa-star"></i>
                     </li>
                     <li>
-                        <span class="fa-li"><i class="fas fa-check"></i></span>
+                        <span class="fa-li"><i class="fas fa-chevron-right"></i></span>
                         JavaScript
-
+                        <i class="fas fa-star"></i><i class="fas fa-star"></i>
                     </li>
                     <li>
-                        <span class="fa-li"><i class="fas fa-check"></i></span>
+                        <span class="fa-li"><i class="fas fa-chevron-right"></i></span>
                         Flutter
-
+                        <i class="fas fa-star"></i><i class="fas fa-star"></i>
                     </li>
                     <li>
-                        <span class="fa-li"><i class="fas fa-check"></i></span>
-                        SQL
-
+                        <span class="fa-li"><i class="fas fa-chevron-right"></i></span>
+                        Java
+                        <i class="fas fa-star"></i><i class="fas fa-star"></i>
                     </li>
-
-
-
-
                 </ul>
                 <br>
                 <ul class="fa-ul mb-0">
                     <li>
                         <strong>Other Software/Tools</strong></li>
-
                     <li>
-                        <span class="fa-li"><i class="fas fa-check"></i></span>
+                        <span class="fa-li"><i class="fas fa-chevron-right"></i></span>
                         Tableau
-
+                        <i class="fas fa-star"></i>
                     </li>
                     <li>
-                        <span class="fa-li"><i class="fas fa-check"></i></span>
-                        Weka
-
-                    </li>
-                    <li>
-                        <span class="fa-li"><i class="fas fa-check"></i></span>
+                        <span class="fa-li"><i class="fas fa-chevron-right"></i></span>
                         Microsoft Power BI
-
+                        <i class="fas fa-star"></i>
                     </li>
                     <li>
-                        <span class="fa-li"><i class="fas fa-check"></i></span>
-                        Microsoft Excel
-
+                        <span class="fa-li"><i class="fas fa-chevron-right"></i></span>
+                        Weka
+                        <i class="fas fa-star"></i><i class="fas fa-star"></i>
                     </li>
                     <li>
-                        <span class="fa-li"><i class="fas fa-check"></i></span>
+                        <span class="fa-li"><i class="fas fa-chevron-right"></i></span>
                         Jupyter Notebook
-
+                        <i class="fas fa-star"></i><i class="fas fa-star"></i>
                     </li>
-
-
+                    <li>
+                        <span class="fa-li"><i class="fas fa-chevron-right"></i></span>
+                        Microsoft Office
+                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                    </li>
                     </li>
                 </ul>
 
